--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "fetch": "babel-node --presets env -- fetchData.js",
     "lint": "sass-lint -c .sass-lint.yml '**/*.scss' -v -q -i 'node_modules/**/*.scss' && eslint --ext .js,.vue --ignore-path .gitignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
-    "scaffold": "plop"
+    "scaffold": "plop",
+    "build-fragment" : "babel-node --presets env -- apollo/schemaQuery.js"
   },
   "precommit": "lint",
   "dependencies": {
