--- a/packages/vuecid-craft-helpers/package.json
+++ b/packages/vuecid-craft-helpers/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@wearelucid/vuecid-craft-helpers",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Helper functions to get your Vuecid-CraftCMS Frontend up and running.",
-  "author": "Jonas Scheiwiller <git@jonasscheiwiller.ch>",
-  "homepage": "https://github.com/wearelucid/vuecid-nuxt-craft#readme",
-  "license": "ISC",
-  "main": "lib/vuecid-craft-helpers.js",
+  "author": "Lucid <buero@wearelucid.ch> (https://www.wearelucid.ch)",
+  "homepage": "https://github.com/wearelucid/vuecid-nuxt-craft.git",
+  "license": "MIT",
+  "main": "dist/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -18,9 +18,18 @@
     "url": "git+https://github.com/wearelucid/vuecid-nuxt-craft.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "build": "babel src --out-dir dist"
   },
   "bugs": {
     "url": "https://github.com/wearelucid/vuecid-nuxt-craft/issues"
+  },
+  "dependencies": {
+    "@babel/core": "^7.5.5",
+    "lodash.has": "^4.5.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/plugin-transform-spread": "^7.2.2",
+    "@babel/preset-env": "^7.5.5"
   }
 }
