--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "generate": "nuxt generate --modern",
     "netlify": "yarn generate",
     "netlifyify": "yarn netlify && PORT=3000 serve",
-    "lint": "sass-lint -c .sass-lint.yml '**/*.scss' -v -q -i 'node_modules/**/*.scss' && eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "sass-lint -c .sass-lint.yml '**/*.scss' -v -q -i 'node_modules/**/*.scss' && eslint --ext .js,.vue --ignore-path .eslintignore .",
+    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .eslintignore .",
     "build-fragment": "babel-node --presets env -- apollo/schemaQuery.js",
     "scaffold": "plop"
   },
