--- a/packages/vuecid-craft-helpers/package.json
+++ b/packages/vuecid-craft-helpers/package.json
@@ -6,13 +6,6 @@
   "homepage": "https://github.com/wearelucid/vuecid-nuxt-craft.git",
   "license": "MIT",
   "main": "dist/index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wearelucid/vuecid-nuxt-craft.git"
@@ -31,5 +24,6 @@
     "@babel/cli": "^7.5.5",
     "@babel/plugin-transform-spread": "^7.2.2",
     "@babel/preset-env": "^7.5.5"
-  }
+  },
+  "gitHead": "61f42a31b7f3a2256e97ada55e25fe828ca7d870"
 }
