[WIP] Generate routes from data by fetching with apolloClient

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@wearelucid/vuecid-helpers": "v3.0.0",
     "graphql-tag": "^2.10.1",
     "no-scroll": "^2.1.0",
+    "node-fetch": "^2.6.0",
     "normalize-scss": "^7.0.0",
     "nuxt": "^2.4.0",
     "sass-burger": "^1.3.1",
