--- a/packages/vuecid-craft-helpers/package.json
+++ b/packages/vuecid-craft-helpers/package.json
@@ -21,6 +21,11 @@
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
+    "apollo-boost": "^0.4.4",
+    "apollo-link": "^1.2.12",
+    "apollo-link-context": "^1.0.18",
+    "apollo-link-http": "^1.5.15",
+    "apollo-server": "^2.8.1",
     "lodash.has": "^4.5.2"
   },
   "devDependencies": {
