--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Make sure to add your ignored files to .eslintignore
+# Make sure to add your ignored files as well to .eslintignore
 # We can't ignore /packages/*/dist/*.js because of npm publishing
 # But we wan't them to exclude from linting!
 # https://github.com/eslint/eslint/issues/9794
