--- a/packages/vuecid-craft-helpers/package.json
+++ b/packages/vuecid-craft-helpers/package.json
@@ -6,10 +6,7 @@
   "homepage": "https://github.com/wearelucid/vuecid-nuxt-craft.git",
   "license": "MIT",
   "main": "dist/index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wearelucid/vuecid-nuxt-craft.git"
-  },
+  "repository": "https://github.com/wearelucid/vuecid-nuxt-craft/tree/master/packages/vuecid-craft-helpers",
   "scripts": {
     "build": "babel src --out-dir dist"
   },
@@ -21,6 +18,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
+    "@wearelucid/vuecid-helpers": "^3.0.0",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-context": "^1.0.18",
