--- a/packages/vuecid-craft-helpers/package.json
+++ b/packages/vuecid-craft-helpers/package.json
@@ -19,12 +19,7 @@
   "dependencies": {
     "@babel/core": "^7.5.5",
     "@wearelucid/vuecid-helpers": "^3.0.0",
-    "apollo-cache-inmemory": "^1.6.3",
-    "apollo-client": "^2.6.4",
-    "apollo-link-context": "^1.0.18",
-    "apollo-link-http": "^1.5.15",
-    "lodash.has": "^4.5.2",
-    "node-fetch": "^2.6.0"
+    "axios": "^0.19.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
