--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,17 @@
 [build]
   command = "yarn netlify"
   publish = "dist"
+
+  # Public URL of your Nuxt.js application
+  FRONTEND_URL_LOCAL=http://localhost:3000
+  FRONTEND_URL_PRODUCTION=https://vuecid-nuxt-craft.lucid.build
+
+  # URL of your Craft installation
+  BACKEND_URL_LOCAL=http://cms.lucid.test
+  BACKEND_URL_PRODUCTION=https://cms.lucid.build
+
+  # GraphQL path
+  GRAPHQL_PATH=/api
+
+  # GraphQL Bearer token
+  GRAPHQL_TOKEN=Uzwv98bNdEu0JNyOUtxxhD5d8ub6-DPXZfPsvYQXXmlWgb3Xyc6txbX92PaslqVj
