[Update] Never use local settings for fragments generation on netlify

--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "build": "nuxt build --modern",
     "start": "nuxt start",
     "generate": "nuxt generate --modern",
-    "netlify": "yarn build-fragments && yarn generate",
+    "netlify": "yarn build-fragments --local=false && yarn generate",
     "netlifyify": "yarn netlify && PORT=3000 serve",
     "lint": "sass-lint -c .sass-lint.yml '**/*.scss' -v -q -i 'node_modules/**/*.scss' && eslint --ext .js,.vue --ignore-path .eslintignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .eslintignore .",
-    "build-fragments": "babel-node --presets env -- apollo/schemaQuery.js",
+    "build-fragments": "babel-node --presets env -- apollo/schemaQuery.js --local",
     "scaffold": "plop"
   },
   "precommit": "lint",
@@ -32,6 +32,7 @@
     "@wearelucid/vuecid-craft-helpers": "^0.2.1",
     "@wearelucid/vuecid-helpers": "v3.0.0",
     "graphql-tag": "^2.10.1",
+    "minimist": "^1.2.0",
     "no-scroll": "^2.1.0",
     "node-fetch": "^2.6.0",
     "normalize-scss": "^7.0.0",
