--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "build": "nuxt build --modern",
     "start": "nuxt start",
     "generate": "nuxt generate --modern",
-    "netlify": "yarn build-fragments --verbose && yarn generate",
+    "netlify": "yarn build-fragments --production --verbose && yarn generate",
     "netlifyify": "yarn netlify && PORT=3000 serve",
     "lint": "sass-lint -c .sass-lint.yml '**/*.scss' -v -q -i 'node_modules/**/*.scss' && eslint --ext .js,.vue --ignore-path .eslintignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .eslintignore .",
-    "build-fragments": "babel-node --presets env -- apollo/schemaQuery.js --local",
+    "build-fragments": "babel-node --presets env -- apollo/schemaQuery.js",
     "scaffold": "plop"
   },
   "precommit": "lint",
