--- a/packages/vuecid-craft-helpers/.babelrc
+++ b/packages/vuecid-craft-helpers/.babelrc
@@ -2,6 +2,12 @@
   "presets": [
     ["@babel/preset-env"]
   ],
-  "plugins": ["@babel/plugin-transform-spread"]
+  "plugins": [
+    "@babel/plugin-transform-spread",
+    [
+      "@babel/plugin-transform-runtime",
+      { "regenerator": true }
+    ]
+  ]
 }
 
