--- a/packages/vuecid-craft-helpers/package.json
+++ b/packages/vuecid-craft-helpers/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.0",
     "@babel/plugin-transform-spread": "^7.2.2",
     "@babel/preset-env": "^7.6.0"
   }
