[Update] Setup: Change things to work with core craft graphql and get things to run again

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@wearelucid/vue-bows": "^1.2.0",
     "@wearelucid/vuecid-craft-helpers": "^0.2.1",
     "@wearelucid/vuecid-helpers": "v3.0.1",
+    "apollo-link-retry": "^2.2.15",
     "graphql-tag": "^2.10.1",
     "minimist": "^1.2.0",
     "no-scroll": "^2.1.0",
