[Update] Move a few examples components, adjust header and nav, start with navigations fetch helper

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "sass-lint -c .sass-lint.yml '**/*.scss' -v -q -i 'node_modules/**/*.scss' && eslint --ext .js,.vue --ignore-path .eslintignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .eslintignore .",
     "build-fragments": "babel-node --presets env -- apollo/schemaQuery.js",
+    "fetch": "babel-node --presets env -- fetch.js",
     "scaffold": "plop"
   },
   "precommit": "lint",
