--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "sass-lint -c .sass-lint.yml '**/*.scss' -v -q -i 'node_modules/**/*.scss' && eslint --ext .js,.vue --ignore-path .eslintignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .eslintignore .",
     "build-fragments": "babel-node --presets env -- apollo/schemaQuery.js",
-    "fetch": "babel-node --presets env -- fetch.js",
+    "fetch": "babel-node -- fetch.js",
     "scaffold": "plop"
   },
   "precommit": "lint",
@@ -28,11 +28,12 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/pwa": "3.0.0-beta.16",
-    "@nuxtjs/sitemap": "^1.2.0",
+    "@nuxtjs/sitemap": "^2.0.0",
     "@wearelucid/vue-bows": "^1.2.0",
     "@wearelucid/vuecid-craft-helpers": "^0.2.1",
     "@wearelucid/vuecid-helpers": "v3.0.1",
     "apollo-link-retry": "^2.2.15",
+    "graphql-import-node": "^0.0.4",
     "graphql-tag": "^2.10.1",
     "minimist": "^1.2.0",
     "no-scroll": "^2.1.0",
@@ -47,15 +48,17 @@
     "what-input": "^5.1.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.6.3",
+    "@babel/core": "^7.6.3",
+    "@babel/node": "^7.6.3",
+    "@babel/preset-env": "^7.6.3",
     "@nuxtjs/eslint-config": "^1.0.1",
-    "@nuxtjs/eslint-module": "^0.2.1",
-    "babel-cli": "^6.26.0",
+    "@nuxtjs/eslint-module": "^1.1.0 ",
     "babel-eslint": "^10.0.1",
-    "babel-preset-env": "^1.6.1",
-    "eslint": "^5.15.1",
-    "eslint-config-prettier": "^4.1.0",
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
     "eslint-config-standard": ">=12.0.0",
-    "eslint-loader": "^2.1.2",
+    "eslint-loader": "^3.0.2",
     "eslint-plugin-import": ">=2.16.0",
     "eslint-plugin-jest": ">=22.3.0",
     "eslint-plugin-node": ">=8.0.1",
@@ -71,6 +74,6 @@
     "pre-commit": "^1.2.2",
     "prettier": "^1.16.4",
     "sass-lint": "^1.12.1",
-    "sass-loader": "^7.0.0"
+    "sass-loader": "^8.0.0"
   }
 }
