--- a/packages/vuecid-craft-helpers/package.json
+++ b/packages/vuecid-craft-helpers/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "@babel/core": "^7.5.5",
     "@wearelucid/vuecid-helpers": "^3.0.0",
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "fs": "^0.0.1-security",
+    "graphql-import-node": "^0.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
