--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .eslintignore .",
     "build-fragments": "babel-node -- apollo/schemaQuery.js",
     "fetch": "babel-node -- fetch.js",
-    "scaffold": "plop"
+    "scaffold": "plop",
+    "setup": "plop"
   },
   "precommit": "lint",
   "dependencies": {
@@ -41,6 +42,7 @@
     "normalize-scss": "^7.0.0",
     "nuxt": "^2.4.0",
     "sass-burger": "^1.3.1",
+    "susy": "^3.0.5",
     "vue-cookie-law": "^1.8.0",
     "vue-i18n": "^8.3.2",
     "vuex": "^3.0.1",
