--- a/package.json
+++ b/package.json
@@ -37,8 +37,6 @@
     "graphql-import-node": "^0.0.4",
     "graphql-tag": "^2.10.1",
     "gulp": "^4.0.2",
-    "gulp-exec": "^4.0.0",
-    "inquirer": "^7.0.0",
     "minimist": "^1.2.0",
     "no-scroll": "^2.1.0",
     "node-fetch": "^2.6.0",
@@ -73,7 +71,10 @@
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.2.2",
     "inquirer-directory": "^2.1.0",
+    "gulp-exec": "^4.0.0",
+    "inquirer": "^7.0.0",
     "lerna": "^3.16.4",
+    "node-plop": "^0.19.0",
     "node-sass": "^4.10.0",
     "plop": "^2.0.0",
     "pre-commit": "^1.2.2",
