--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "graphql-import-node": "^0.0.4",
     "graphql-tag": "^2.10.1",
     "gulp": "^4.0.2",
+    "gulp-shell": "^0.7.1",
     "minimist": "^1.2.0",
     "no-scroll": "^2.1.0",
     "node-fetch": "^2.6.0",
@@ -70,9 +71,8 @@
     "eslint-plugin-promise": ">=4.0.1",
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.2.2",
-    "inquirer-directory": "^2.1.0",
-    "gulp-exec": "^4.0.0",
     "inquirer": "^7.0.0",
+    "inquirer-directory": "^2.1.0",
     "lerna": "^3.16.4",
     "node-plop": "^0.19.0",
     "node-sass": "^4.10.0",
