--- a/packages/vuecid-craft-helpers/package.json
+++ b/packages/vuecid-craft-helpers/package.json
@@ -21,7 +21,8 @@
     "@wearelucid/vuecid-helpers": "^3.0.0",
     "axios": "^0.19.0",
     "fs": "^0.0.1-security",
-    "graphql-import-node": "^0.0.4"
+    "graphql-import-node": "^0.0.4",
+    "graphql-tag": "^2.10.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
