--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "node-fetch": "^2.6.0",
     "normalize-scss": "^7.0.0",
     "nuxt": "^2.4.0",
+    "nuxt-i18n": "^6.3.0",
     "sass-burger": "^1.3.1",
     "vue-cookie-law": "^1.8.0",
-    "vue-i18n": "^8.3.2",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
     "what-input": "^5.1.3"
