--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "nuxt build --modern",
     "start": "nuxt start",
     "generate": "nuxt generate --modern",
-    "netlify": "yarn build-fragments --production --verbose && yarn fetch && yarn generate",
+    "netlify": "yarn build-fragments --production --verbose && yarn fetch --production && yarn generate",
     "netlifyify": "yarn netlify && PORT=3000 serve",
     "lint": "sass-lint -c .sass-lint.yml '**/*.scss' -v -q -i 'node_modules/**/*.scss' && eslint --ext .js,.vue --ignore-path .eslintignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .eslintignore .",
@@ -30,7 +30,7 @@
     "@nuxtjs/pwa": "3.0.0-beta.16",
     "@nuxtjs/sitemap": "^2.0.0",
     "@wearelucid/vue-bows": "^1.2.0",
-    "@wearelucid/vuecid-craft-helpers": "^0.7.1",
+    "@wearelucid/vuecid-craft-helpers": "^0.7.2",
     "@wearelucid/vuecid-helpers": "v3.0.1",
     "apollo-link-retry": "^2.2.15",
     "focus-trap": "^5.0.2",
