--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "contributors": [
     "Marco Ehrenmann <marco.ehrenmann@wearelucid.ch>",
     "Jonas Scheiwiller <jonas.scheiwiller@wearelucid.ch>",
-    "Fabian Ellenberger <fabian.ellenberger@wearelucid.ch>"
+    "Fabian Ellenberger <fabian.ellenberger@wearelucid.ch>",
+    "Sebastian Bayer <sebastian.bayer@wearelucid.ch>"
   ],
   "license": "MIT",
   "scripts": {
@@ -34,7 +35,7 @@
     "@wearelucid/vuecid-helpers": "v3.0.1",
     "apollo-link-retry": "^2.2.15",
     "focus-trap": "^5.0.2",
-    "focus-trap-vue": "^0.0.4",
+    "focus-trap-vue": "^0.0.6",
     "global": "^4.4.0",
     "graphql-import-node": "^0.0.4",
     "graphql-tag": "^2.10.1",
@@ -76,7 +77,7 @@
     "inquirer": "^7.0.0",
     "inquirer-directory": "^2.1.0",
     "lerna": "^3.16.4",
-    "node-plop": "^0.24.0",
+    "node-plop": "^0.25.0",
     "node-sass": "^4.10.0",
     "plop": "^2.0.0",
     "pre-commit": "^1.2.2",
