[Update] GenerateRoutes: Prefix uris with language for route generation

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint": "sass-lint -c .sass-lint.yml '**/*.scss' -v -q -i 'node_modules/**/*.scss' && eslint --ext .js,.vue --ignore-path .eslintignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .eslintignore .",
     "build-fragments": "babel-node -- apollo/schemaQuery.js",
+    "test": "babel-node -- testData.js",
     "fetch": "babel-node -- fetch.js",
     "scaffold": "plop"
   },
