--- a/packages/vuecid-craft-helpers/package.json
+++ b/packages/vuecid-craft-helpers/package.json
@@ -22,7 +22,8 @@
     "axios": "^0.19.0",
     "fs": "^0.0.1-security",
     "graphql-import-node": "^0.0.4",
-    "graphql-tag": "^2.10.1"
+    "graphql-tag": "^2.10.1",
+    "lodash.clonedeep": "^4.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
