[Chore] Setup: Remove some packages and update linters

--- a/package.json
+++ b/package.json
@@ -62,18 +62,11 @@
     "@babel/preset-env": "^7.11.0",
     "@nuxtjs/eslint-config": "^4.0.0",
     "@nuxtjs/eslint-module": "^2.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^7.6.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-standard": ">=12.0.0",
-    "eslint-plugin-import": ">=2.22.0",
-    "eslint-plugin-jest": ">=23.20.0",
-    "eslint-plugin-node": ">=11.1.0",
-    "eslint-plugin-nuxt": ">=1.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": ">=4.0.1",
-    "eslint-plugin-standard": ">=4.0.0",
-    "eslint-plugin-vue": "^6.0.0",
     "inquirer": "^7.3.3",
     "inquirer-directory": "^2.1.0",
     "lerna": "^3.22.1",
@@ -81,7 +74,7 @@
     "node-sass": "^5.0.0",
     "plop": "^2.7.4",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.2",
     "sass-lint": "^1.12.1",
     "sass-loader": "^10.0.0"
   }
